--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "htmllint-cli": "github:kevincolten/htmllint-cli",
     "http-server": "^0.11.1",
     "javascripting": "^2.6.1",
+    "jquery": "^3.5.0",
     "jsdom": "^11.6.2",
     "mocha": "^5.0.0",
     "postcss-html": "^0.34.0",
